--- a/Main/main.html
+++ b/Main/main.html
@@ -27,7 +27,7 @@
 
     .grid {
       display: grid;
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(2, 1fr); /* 2 элемента в ряду */
       gap: 20px;
       max-width: 900px;
       width: 100%;
@@ -48,9 +48,15 @@
       transform: scale(1.05);
     }
 
+    @media (max-width: 768px) {
+      .grid {
+        grid-template-columns: repeat(2, 1fr); /* 2 элемента в ряду для планшетов и небольших экранов */
+      }
+    }
+
     @media (max-width: 600px) {
       .grid {
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr; /* 1 элемент в ряду на мобильных устройствах */
       }
     }
   </style>
