--- a/Main/main.html
+++ b/Main/main.html
@@ -56,7 +56,7 @@
 
     @media (max-width: 600px) {
       .grid {
-        grid-template-columns: 1fr; /* 1 элемент в ряду на мобильных устройствах */
+        grid-template-columns: repeat(2, 1fr); /* 1 элемент в ряду на мобильных устройствах */
       }
     }
   </style>
